# inka2

./: .gitignore  .pdm-python  DEVELOPMENT.md  Makefile  Pipfile  README.md  README_TW.md  pyproject.toml  report.xml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
src/inka/: environment.py
src/inka/models/: anki_api.py
src/inka2/: cli.py  config.ini  config.ini.original  environment.py  exceptions.py  hashes.json  helpers.py
src/inka2/mistune_plugins/: mathjax3.py
src/inka2/models/: anki_api.py  anki_media.py  config.py  converter.py  img_handler.py  parser.py  writer.py
src/inka2/models/notes/: basic_note.py  cloze_note.py  note.py
tests/: conftest.py  test_basic_note.py  test_cli.py  test_cloze_note.py  test_config.py  test_converter.py  test_hasher.py  test_helpers.py  test_highlight.py  test_img_handler.py  test_mistune.py  test_note.py  test_writer.py
tests/parser/: test_get_cleaned_answer.py  test_get_notes_from_section.py
tests/resources/: index_out_of_range.md  math_example.md  math_example2.md  math_example2_init.md  math_example_init.md  spring_kafka.md  test_inka_data.md  test_inka_data_init.md
tests/resources/anki_data/: prefs21.db
tests/resources/anki_data/User 1/: collection.anki2
tests/resources/anki_data/User 1/backups/: backup-2024-02-24-10.58.02.colpkg
tests/resources/defaults/: config.ini  config_add_filename.ini  config_sysid.ini
